--- a/p1-a-string.ipynb
+++ b/p1-a-string.ipynb
@@ -98,38 +98,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30721"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "ord('码')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'码'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "chr(30721)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "砂\n",
+      "0x7802\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(chr(30722))\n",
+    "print(hex(30722))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "砂\n",
+      "30722\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "c = '\\u7802'\n",
+    "print(c)\n",
+    "d = 0x7802\n",
+    "print(d)"
    ]
   },
   {
@@ -160,47 +204,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'用单引号括起来的字符串里不能直接包含单引号，但可以有\"双引号\"'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'用单引号括起来的字符串里不能直接包含单引号，但可以有\"双引号\"'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"用双引号括起来的字符串里不能直接包含双引号，但可以有'单引号'\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "\"用双引号括起来的字符串里不能直接包含双引号，但可以有'单引号'\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'中文的引号其实是另外的字符，总是可以包含的”“‘’'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "\"中文的引号其实是另外的字符，总是可以包含的”“‘’\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'三个单或者双引号可以包含多行文字\\n就像这样'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'''三个单或者双引号可以包含多行文字\n",
+    "就像这样'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'其实多行文字并没有什么特别\\n像这样插入一个换行字符也能实现'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'其实多行文字并没有什么特别\\n像这样插入一个换行字符也能实现'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<center>Python 支持的转义字符</center>**\n",
+    "\n",
+    "|转义字符|说明|\n",
+    "|---|---| \n",
+    "|\\n|换行符，将光标位置移到下一行开头|                                        \n",
+    "|\\r|回车符，将光标位置移到本行开头|  \n",
+    "|\\t|水平制表符，也即 Tab 键，一般相当于四个空格。|  \n",
+    "|\\a|蜂鸣器响铃。注意不是喇叭发声，现在的计算机很多都不带蜂鸣器了，所以响铃不一定有效|  \n",
+    "|\\b|退格（Backspace），将光标位置移到前一列|  \n",
+    "|\\\\|反斜线|  \n",
+    "|\\'|单引号|  \n",
+    "|\\\"|双引号|  \n",
+    "|\\ |在字符串行尾的续行符，即一行未完，转到下一行继续写|  "
    ]
   },
   {
@@ -252,11 +371,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "计算完毕，获胜概率为 62%，败北概率为 29%，平局概率为 9%。\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "x = 62\n",
+    "y = 29\n",
+    "print('计算完毕，获胜概率为 ' + str(x) + '%，败北概率为 ' + str(y) + '%，平局概率为 ' + str(100-x-y) + '%。')"
    ]
   },
   {
@@ -268,11 +397,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "计算完毕，获胜概率为 62%，败北概率为 29%，平局概率为 9%。\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "x = 62\n",
+    "y = 29\n",
+    "print(f'计算完毕，获胜概率为 {x}%，败北概率为 {y}%，平局概率为 {100-x-y}%。')"
    ]
   },
   {
@@ -287,44 +426,81 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "计算完毕，获胜概率为{62}%，败北概率为 {29}%，平局概率为 {9}%。\n"
+     ]
+    }
+   ],
    "source": [
-    "## 字符串处理"
+    "x = 62\n",
+    "y = 29\n",
+    "print(f'计算完毕，获胜概率为{{{x}}}%，败北概率为 {{{y}}}%，平局概率为 {{{100-x-y}}}%。')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 字符串处理\n",
+    "\n",
     "先看两个基本操作：字符串串接和字符串长度。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "hello = 'Hello'\n",
+    "world = \"world\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 可以用操作符 + 来串接字符串\n",
+    "hw = hello + ' ' + world + '!'\n",
+    "print(hw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 内置函数 len() 能返回字符串的长度，这个函数还能返回别的类型的数据，以后我们会经常碰到它\n",
+    "len(hw)"
    ]
   },
   {
@@ -342,38 +518,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello world!'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.capitalize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hello.upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'   Hello'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hello.rjust(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  Hello  '"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hello.center(9)"
    ]
   },
   {
@@ -390,29 +610,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hello.isalpha()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hello.isdigit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'42'.isdigit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hello.islower()"
    ]
   },
   {
@@ -430,74 +703,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'Py' in 'Python'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'py' in 'Python' # 大小写敏感"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "s = 'Perform a string formatting operation. The string on which this method is called can contain literal text...'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s.find('string')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s.find('abracadabra')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s.index('string')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s.rindex('string')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "# 下面这句会抛出 \"ValueError: substring not found\" 的异常\n",
+    "# s.rindex('abracadabra')"
    ]
   },
   {
@@ -509,20 +849,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "replace l by {ell} : He{ell}{ell}o\n",
+      "He{ell}{ell}o\n",
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(hello)\n",
+    "reHello = hello.replace('l','{ell}')\n",
+    "print(f'replace l by {{ell}} : {reHello}')\n",
+    "print(hello.replace('l', '{ell}'))\n",
+    "print(hello) #origin Hello do not change"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'He{ell}lo'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hello.replace('l', '{ell}', 1)"
    ]
   },
   {
@@ -548,92 +914,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcdefghijklmnopqrstuvwxyz'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.ascii_lowercase # 英文小写字母"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.ascii_uppercase # 英文大写字母"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.ascii_letters # 英文小写和大写字母"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0123456789'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.digits # 十进制数字"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0123456789abcdefABCDEF'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.hexdigits # 十六进制数字"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'01234567'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.octdigits # 八进制数字"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.punctuation # 标点符号（英文）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\t\\n\\r\\x0b\\x0c'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.whitespace # 各种空白字符，包括空格、tab、换行、回车等等"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~ \\t\\n\\r\\x0b\\x0c'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.printable # 上面所有字符的大合集"
    ]
   },
   {
@@ -657,7 +1122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
